force-app/main/default/objects/Membership_Transaction__c/Membership_Transaction__c.object-meta.xml
<CustomObject>
    <description>This object is used to details of the transaction related to a particular membership related to a account</description>
    <label>Membership Transaction</label>
    <nameField>
        <displayFormat>Transaction-{0000}</displayFormat>
        <label>Transaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Membership Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>