force-app/main/default/objects/Membership_Transaction__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <description>Stores account holder name available on check that associated with payment info; used for verification and records.</description>
    <label>Account Holder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>