force-app/main/default/objects/Membership_Transaction__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Stores account number that are available on check (if transaction is paid by check); used for identification and reconciliation.</description>
    <label>Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>