force-app/main/default/objects/Membership_Transaction__c/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>Defines the billing type (e.g., self-pay, paid by CP) who pays for this transaction; used to drive billing logic and reporting.</description>
    <inlineHelpText>To Modify the Billing Type, Please Navigate to and Update the Associated Order Record.</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self-Pay</fullName>
            </value>
            <value>
                <fullName>Paid By Coordinating Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>