force-app/main/default/objects/Membership_Transaction__c/fields/CheckDate__c.field-meta.xml
<CustomField>
    <fullName>CheckDate__c</fullName>
    <description>Stores the date on which the check was issued or received; used for financial tracking.</description>
    <label>Check Date</label>
    <type>Date</type>
</CustomField>