force-app/main/default/objects/Membership_Transaction__c/fields/EnrollType__c.field-meta.xml
<CustomField>
    <fullName>EnrollType__c</fullName>
    <description>Specifies the type of enrollment from predefined options.</description>
    <label>Enroll Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Rejoin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>