force-app/main/default/objects/Membership_Transaction__c/fields/GatewayReference__c.field-meta.xml
<CustomField>
    <fullName>GatewayReference__c</fullName>
    <description>Stores the payment gateway reference ID; used for tracking transactions in external systems.</description>
    <label>Gateway Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>