force-app/main/default/objects/Membership_Transaction__c/fields/GatewayTransactionFee__c.field-meta.xml
<CustomField>
    <fullName>GatewayTransactionFee__c</fullName>
    <description>Records the transaction fee charged by the payment gateway.</description>
    <label>Gateway Transaction Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>