force-app/main/default/objects/Membership_Transaction__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <description>Links the transaction to an invoice that is related to this transaction record; used for billing and financial tracking.</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Membership Transactions</relationshipLabel>
    <relationshipName>Membership_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>