force-app/main/default/objects/Membership_Transaction__c/fields/IsPaid__c.field-meta.xml
<CustomField>
    <fullName>IsPaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the payment has been made.</description>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>