force-app/main/default/objects/Membership_Transaction__c/fields/Member_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Account_Id__c</fullName>
    <formula>Related_Membership__r.Membership_Account_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Account Id</label>
    <type>Text</type>
</CustomField>