force-app/main/default/objects/Membership_Transaction__c/fields/Membership_Term_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Term_End_Date__c</fullName>
    <description>Stores derived membership term end date; used for lifecycle tracking.</description>
    <formula>Related_Membership__r.TermEndDate__c</formula>
    <label>Membership Term End Date</label>
    <type>Date</type>
</CustomField>