force-app/main/default/objects/Membership_Transaction__c/fields/MembershipLevel__c.field-meta.xml
<CustomField>
    <fullName>MembershipLevel__c</fullName>
    <description>Selects the membership level from predefined options.</description>
    <label>Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Main Street America Community Member</fullName>
            </value>
            <value>
                <fullName>ILMS Staff Sub-member</fullName>
            </value>
            <value>
                <fullName>CAMSA Staff Sub-member</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>NMSC Staff Member</fullName>
            </value>
            <value>
                <fullName>Complimentary Membership</fullName>
            </value>
            <value>
                <fullName>ILMS Member</fullName>
            </value>
            <value>
                <fullName>CAMSA Member</fullName>
            </value>
            <value>
                <fullName>Start-up Sub-member</fullName>
            </value>
            <value>
                <fullName>Start-up Member</fullName>
            </value>
            <value>
                <fullName>Friend of Main Street</fullName>
            </value>
            <value>
                <fullName>Allied Member</fullName>
            </value>
            <value>
                <fullName>Coordinating Program Member</fullName>
            </value>
            <value>
                <fullName>General Member</fullName>
            </value>
            <value>
                <fullName>Coordinating Staff Sub-member</fullName>
            </value>
            <value>
                <fullName>General Staff Sub-member</fullName>
            </value>
            <value>
                <fullName>Allied Staff Sub-member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>