force-app/main/default/objects/Membership_Transaction__c/fields/NonTaxDeductibleAmount__c.field-meta.xml
<CustomField>
    <fullName>NonTaxDeductibleAmount__c</fullName>
    <description>Stores the non-tax-deductible portion of the transaction; used for compliance and reporting.</description>
    <label>Non Tax Deductible Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>