force-app/main/default/objects/Membership_Transaction__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the transaction to the related order; used for order-to-payment tracking.</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Membership Transactions</relationshipLabel>
    <relationshipName>Membership_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>