force-app/main/default/objects/Membership_Transaction__c/fields/OriginalAmount__c.field-meta.xml
<CustomField>
    <fullName>OriginalAmount__c</fullName>
    <description>Stores the original transaction amount before adjustments; used for financial calculations.</description>
    <label>Original Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>