force-app/main/default/objects/Membership_Transaction__c/fields/Paid_By__c.field-meta.xml
<CustomField>
    <fullName>Paid_By__c</fullName>
    <description>Specifies who made the payment; used for tracking payer information.</description>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
            </value>
            <value>
                <fullName>Complimentary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>