force-app/main/default/objects/Membership_Transaction__c/fields/Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Id__c</fullName>
    <description>Stores unique payment id; used for tracking transactions across systems.</description>
    <label>Payment Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>