force-app/main/default/objects/Membership_Transaction__c/fields/Payment_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Payment_Instrument__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>References the associated payment instrument.</description>
    <label>Payment Instrument</label>
    <referenceTo>PaymentInstrument</referenceTo>
    <relationshipLabel>Membership Transactions</relationshipLabel>
    <relationshipName>Membership_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>