force-app/main/default/objects/Membership_Transaction__c/fields/Related_Membership__c.field-meta.xml
<CustomField>
    <fullName>Related_Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to related membership; used to associate transaction with membership lifecycle.</description>
    <label>Related Membership</label>
    <referenceTo>Memberships__c</referenceTo>
    <relationshipLabel>Membership Transactions</relationshipLabel>
    <relationshipName>Membership_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>