force-app/main/default/objects/Membership_Transaction__c/fields/Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Routing_Number__c</fullName>
    <description>Stores routing number for bank transactions; used for payment processing.</description>
    <label>Routing Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>