force-app/main/default/objects/Membership_Transaction__c/fields/TaxDeductionAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxDeductionAmount__c</fullName>
    <description>Stores the tax-deductible portion of the transaction; used for compliance and receipt generation.</description>
    <label>Tax Deduction Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>