force-app/main/default/objects/Membership_Transaction__c/fields/TaxReceiptStatus__c.field-meta.xml
<CustomField>
    <fullName>TaxReceiptStatus__c</fullName>
    <description>Indicates the status of the tax receipt from predefined options.</description>
    <label>Tax Receipt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>To Be Sent</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Don&apos;t Send</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>