force-app/main/default/objects/Membership_Transaction__c/fields/TotalTransactionFee__c.field-meta.xml
<CustomField>
    <fullName>TotalTransactionFee__c</fullName>
    <description>Records the total fee incurred for the transaction.</description>
    <label>Total Transaction Fee</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>