force-app/main/default/objects/Membership_Transaction__c/fields/Transaction_For_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_For_Change_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transaction For Change Type</label>
    <type>Checkbox</type>
</CustomField>