force-app/main/default/objects/Membership_Transaction__c/fields/Transaction_Name__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Name__c</fullName>
    <description>Auto-generated transaction name+number; used for identification and display in UI and reports.</description>
    <label>Transaction Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>