force-app/main/default/objects/Membership_Transaction__c/fields/TransactionCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionCompletionDate__c</fullName>
    <description>Stores the date when payment was completed for membership transaction; used for accounting and reporting.</description>
    <label>Payment Received Date</label>
    <type>Date</type>
</CustomField>