force-app/main/default/objects/Membership_Transaction__c/fields/TransactionDueDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDueDate__c</fullName>
    <description>Stores the due date of the transaction from created membership transaction; used for payment tracking and reminders.</description>
    <label>Transaction Due Date</label>
    <type>Date</type>
</CustomField>