force-app/main/default/objects/Membership_Transaction__c/validationRules/Fill_CP_Payment_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>Fill_CP_Payment_Category</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( PaymentMethod__c , &quot;Paid By CP&quot;),
  ISBLANK(TEXT( CP_Payment_Category__c ))
)</errorConditionFormula>
    <errorDisplayField>CP_Payment_Category__c</errorDisplayField>
    <errorMessage>Please fill this field!</errorMessage>
</ValidationRule>