force-app/main/default/objects/Membership_Transaction__c/validationRules/Payment_Method_Required_for_Paid_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Method_Required_for_Paid_Status</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Status__c, &apos;Paid&apos;),
  ISPICKVAL( PaymentMethod__c, &quot;&quot;)
)</errorConditionFormula>
    <errorMessage>Please provide a payment method when the status is &apos;Paid&apos;.</errorMessage>
</ValidationRule>